# learning_computer_graphics

./: .gitignore  .gitmodules  CMakeLists.txt  README  build_env.sh
CuriosityGraphicsBase/: .gitignore  CMakeLists.txt  README
CuriosityGraphicsBase/include/glad/: glad.h
CuriosityGraphicsBase/src/: CMakeLists.txt  glad.c  graphicsglobal.h  program.cpp  program.h  shader.cpp  shader.h  transmat4.cpp  transmat4.h  vec3.cpp  vec3.h
note/: .openGL.note.swp  openGL.note
src/01_get_start/: CMakeLists.txt  main.cpp
src/02_compile_shader/: CMakeLists.txt  main.cpp
src/03_draw_triangle/: CMakeLists.txt  main.cpp
src/04_vertex_attributes/: CMakeLists.txt  main.cpp
src/05_passing_data/: CMakeLists.txt  main.cpp
src/06_tessellation_control_shader/: CMakeLists.txt  main.cpp
src/07_geometry_shader/: CMakeLists.txt  main.cpp
src/08_draw_cube/: CMakeLists.txt  main.cpp
src/09_test_shader/: CMakeLists.txt  main.cpp
src/10_some_cube/: CMakeLists.txt  main.cpp
src/11_camera/: CMakeLists.txt  main.cpp
src/12_light_source/: CMakeLists.txt  main.cpp
src/13_diffuse_light/: CMakeLists.txt  main.cpp
src/14_material/: CMakeLists.txt  main.cpp
src/15_lighting_maps/: CMakeLists.txt  main.cpp
src/16_light_casters/: CMakeLists.txt
src/17_multiple_light/: CMakeLists.txt  main.cpp
src/18_load_model/: CMakeLists.txt  main.cpp
src/base/: .gitignore  Makefile.lib  Makefile.test_ray  Makefile.test_sphere_circle  Makefile.test_vector  base.pro  base.pro.user.398af7f  base.pro.user.9204140  camera.cpp  camera.h  circle.h  lib.pro  mathutil.h  matrix.h  mesh.cpp  mesh.h  model.cpp  model.h  point2.h  point3.h  ray3.h  shader.cpp  shader.h  sphere.h  target_wrapper.sh  test_ray.cpp  test_ray.pro  test_sphere_circle.cpp  test_sphere_circle.pro  test_vector.cpp  test_vector.pro  testvector.cpp  transmat4.cpp  transmat4.h  triangle3.h  vec2.cpp  vec2.h  vec3.cpp  vec3.h  vector2.h  (+3 more)
src/base/.tmp/: test_ray.moc  test_sphere_circle.moc  test_vector.moc
src/base/test/: test_ray  test_sphere_circle  test_vector
src/shader/: 10_some_cube.vs  11_camera.fs  11_camera.vs  12_light_source.fs  12_object.fs  12_object.vs  13_object.fs  13_object.vs  14_material.fs  15_lighting_maps.fs  15_lighting_maps.vs  16_light_casters.fs  17_multiple_light.fs  18_load_model.fs  18_load_model.vs
